// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TourTooltip snapshot matches snapshot for first step 1`] = `
<View
  collapsable={false}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "left": 16,
        "opacity": 1,
        "top": 272.6666666666667,
        "width": 718,
      },
    }
  }
  jestInlineStyle={
    [
      {
        "position": "absolute",
        "zIndex": 100,
      },
    ]
  }
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    [
      {
        "position": "absolute",
        "zIndex": 100,
      },
      {
        "left": 16,
        "opacity": 1,
        "top": 272.6666666666667,
        "width": 718,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 149,
          "top": -6.666666666666667,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "borderCurve": "continuous",
          "borderRadius": 4,
          "height": 20,
          "position": "absolute",
          "transform": [
            {
              "rotate": "45deg",
            },
          ],
          "width": 20,
          "zIndex": 2,
        },
        {
          "backgroundColor": "#F4F5F8",
        },
      ]
    }
    style={
      [
        {
          "borderCurve": "continuous",
          "borderRadius": 4,
          "height": 20,
          "position": "absolute",
          "transform": [
            {
              "rotate": "45deg",
            },
          ],
          "width": 20,
          "zIndex": 2,
        },
        {
          "backgroundColor": "#F4F5F8",
        },
        {
          "left": 149,
          "top": -6.666666666666667,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderCurve": "continuous",
          "borderRadius": 8,
          "boxShadow": "0px 2px 8px rgba(14,15,19,0.15)",
          "padding": 16,
        },
        {
          "backgroundColor": "#F4F5F8",
        },
      ]
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": 16,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
              {
                "paddingRight": 32,
              },
            ]
          }
        >
          Title
        </Text>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="body"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
              },
            ]
          }
        >
          Description
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 16,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "opacity": 0,
              "pointerEvents": "box-none",
            }
          }
        >
          <View
            accessibilityLabel="Indietro"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={8}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              collapsable={false}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 24,
                    "width": 24,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                accessibilityLabel=""
                accessible={false}
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                collapsable={false}
                color="#0B3EE3"
                focusable={false}
                height={36}
                importantForAccessibility="no-hide-descendants"
                jestAnimatedProps={
                  {
                    "value": {
                      "color": "rgba(11, 62, 227, 1)",
                    },
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {},
                  }
                }
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGPath
                    d="M6.768 17.36a1 1 0 0 1-1.536 1.28L.765 13.28a2 2 0 0 1 0-2.56l4.467-5.36a1 1 0 1 1 1.536 1.28L3.135 11H23a1 1 0 1 1 0 2H3.135l3.633 4.36Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Fase 1 di 3"
          accessible={true}
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            }
          }
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "#0B3EE3",
                  "borderColor": "transparent",
                  "borderWidth": 0,
                  "height": 4,
                  "transitionDuration": "200ms",
                  "transitionProperty": [
                    "width",
                    "height",
                    "backgroundColor",
                  ],
                  "width": 16,
                },
              ]
            }
            style={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "#0B3EE3",
                  "borderColor": "transparent",
                  "borderWidth": 0,
                  "height": 4,
                  "width": 16,
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "transitionDuration": "200ms",
                  "transitionProperty": [
                    "width",
                    "height",
                    "backgroundColor",
                  ],
                  "width": 8,
                },
              ]
            }
            style={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "width": 8,
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "transitionDuration": "200ms",
                  "transitionProperty": [
                    "width",
                    "height",
                    "backgroundColor",
                  ],
                  "width": 8,
                },
              ]
            }
            style={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "width": 8,
                },
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignSelf": "center",
            }
          }
        >
          <View
            accessibilityLabel="Avanti"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": false,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 14,
                "left": 24,
                "right": 24,
                "top": 14,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-start",
              }
            }
          >
            <View
              collapsable={false}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "alignItems": "center",
                    "borderCurve": "continuous",
                    "elevation": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "textAlignVertical": "center",
                  },
                  {
                    "paddingHorizontal": 0,
                  },
                  {
                    "backgroundColor": "transparent",
                    "borderColor": "#0B3EE3",
                    "borderRadius": 8,
                    "borderWidth": 0,
                    "height": undefined,
                  },
                  {},
                ]
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "borderCurve": "continuous",
                    "elevation": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "textAlignVertical": "center",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                  {},
                  {
                    "paddingHorizontal": 0,
                  },
                  {
                    "backgroundColor": "transparent",
                    "borderColor": "#0B3EE3",
                    "borderRadius": 8,
                    "borderWidth": 0,
                    "height": undefined,
                  },
                  {},
                ]
              }
            >
              <View
                collapsable={false}
                jestAnimatedProps={
                  {
                    "value": {},
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {},
                  }
                }
                jestInlineStyle={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    {
                      "columnGap": 8,
                    },
                    false,
                  ]
                }
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    {
                      "columnGap": 8,
                    },
                    false,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  accessible={false}
                  allowFontScaling={true}
                  collapsable={false}
                  ellipsizeMode="tail"
                  importantForAccessibility="no-hide-descendants"
                  jestAnimatedProps={
                    {
                      "value": {},
                    }
                  }
                  jestAnimatedStyle={
                    {
                      "value": {
                        "color": "rgba(11, 62, 227, 1)",
                      },
                    }
                  }
                  jestInlineStyle={
                    [
                      {
                        "textAlign": "auto",
                      },
                      {
                        "color": "#0B3EE3",
                      },
                    ]
                  }
                  maxFontSizeMultiplier={1.5}
                  numberOfLines={1}
                  style={
                    [
                      {},
                      {
                        "color": undefined,
                        "fontFamily": "Titillio",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                      [
                        {
                          "textAlign": "auto",
                        },
                        {
                          "color": "#0B3EE3",
                        },
                        {
                          "color": "rgba(11, 62, 227, 1)",
                        },
                      ],
                    ]
                  }
                >
                  Avanti
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "opacity": 0.7,
          "position": "absolute",
          "right": 8,
          "top": 8,
        }
      }
    >
      <View
        accessibilityLabel="Salta"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            }
          }
          jestInlineStyle={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={36}
            bbWidth={36}
            collapsable={false}
            color="#0E0F13"
            focusable={false}
            height={36}
            importantForAccessibility="no-hide-descendants"
            jestAnimatedProps={
              {
                "value": {
                  "color": "rgba(14, 15, 19, 1)",
                },
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 36,
                  "width": 36,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={36}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M16.7071 8.70711c.3905-.39053.3905-1.02369 0-1.41422-.3905-.39052-1.0237-.39052-1.4142 0L12 10.5858 8.70711 7.29289c-.39053-.39052-1.02369-.39052-1.41422 0-.39052.39053-.39052 1.02369 0 1.41422L10.5858 12l-3.29291 3.2929c-.39052.3905-.39052 1.0237 0 1.4142.39053.3905 1.02369.3905 1.41422 0L12 13.4142l3.2929 3.2929c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L13.4142 12l3.2929-3.29289Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`TourTooltip snapshot matches snapshot for last step 1`] = `
<View
  collapsable={false}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {
        "left": 16,
        "opacity": 1,
        "top": 272.6666666666667,
        "width": 718,
      },
    }
  }
  jestInlineStyle={
    [
      {
        "position": "absolute",
        "zIndex": 100,
      },
    ]
  }
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    [
      {
        "position": "absolute",
        "zIndex": 100,
      },
      {
        "left": 16,
        "opacity": 1,
        "top": 272.6666666666667,
        "width": 718,
      },
    ]
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "left": 149,
          "top": -6.666666666666667,
        },
      }
    }
    jestInlineStyle={
      [
        {
          "borderCurve": "continuous",
          "borderRadius": 4,
          "height": 20,
          "position": "absolute",
          "transform": [
            {
              "rotate": "45deg",
            },
          ],
          "width": 20,
          "zIndex": 2,
        },
        {
          "backgroundColor": "#F4F5F8",
        },
      ]
    }
    style={
      [
        {
          "borderCurve": "continuous",
          "borderRadius": 4,
          "height": 20,
          "position": "absolute",
          "transform": [
            {
              "rotate": "45deg",
            },
          ],
          "width": 20,
          "zIndex": 2,
        },
        {
          "backgroundColor": "#F4F5F8",
        },
        {
          "left": 149,
          "top": -6.666666666666667,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "borderCurve": "continuous",
          "borderRadius": 8,
          "boxShadow": "0px 2px 8px rgba(14,15,19,0.15)",
          "padding": 16,
        },
        {
          "backgroundColor": "#F4F5F8",
        },
      ]
    }
  >
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "column",
          "gap": 16,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
              {
                "paddingRight": 32,
              },
            ]
          }
        >
          Last Step
        </Text>
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="body"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
              },
            ]
          }
        >
          Final description
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 16,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={false}
        >
          <View
            accessibilityLabel="Indietro"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={8}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View
              collapsable={false}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 24,
                    "width": 24,
                  },
                ]
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 24,
                    "width": 24,
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                accessibilityLabel=""
                accessible={false}
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                collapsable={false}
                color="#0B3EE3"
                focusable={false}
                height={36}
                importantForAccessibility="no-hide-descendants"
                jestAnimatedProps={
                  {
                    "value": {
                      "color": "rgba(11, 62, 227, 1)",
                    },
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {},
                  }
                }
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGPath
                    d="M6.768 17.36a1 1 0 0 1-1.536 1.28L.765 13.28a2 2 0 0 1 0-2.56l4.467-5.36a1 1 0 1 1 1.536 1.28L3.135 11H23a1 1 0 1 1 0 2H3.135l3.633 4.36Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Fase 3 di 3"
          accessible={true}
          style={
            {
              "alignItems": "center",
              "columnGap": 8,
              "flexDirection": "row",
            }
          }
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "transitionDuration": "200ms",
                  "transitionProperty": [
                    "width",
                    "height",
                    "backgroundColor",
                  ],
                  "width": 8,
                },
              ]
            }
            style={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "width": 8,
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "transitionDuration": "200ms",
                  "transitionProperty": [
                    "width",
                    "height",
                    "backgroundColor",
                  ],
                  "width": 8,
                },
              ]
            }
            style={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#636B82",
                  "borderWidth": 1,
                  "height": 8,
                  "width": 8,
                },
              ]
            }
          />
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            jestInlineStyle={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "#0B3EE3",
                  "borderColor": "transparent",
                  "borderWidth": 0,
                  "height": 4,
                  "transitionDuration": "200ms",
                  "transitionProperty": [
                    "width",
                    "height",
                    "backgroundColor",
                  ],
                  "width": 16,
                },
              ]
            }
            style={
              [
                {
                  "borderCurve": "continuous",
                  "borderRadius": 20,
                },
                {
                  "backgroundColor": "#0B3EE3",
                  "borderColor": "transparent",
                  "borderWidth": 0,
                  "height": 4,
                  "width": 16,
                },
              ]
            }
          />
        </View>
        <View
          style={
            {
              "alignSelf": "center",
            }
          }
        >
          <View
            accessibilityLabel="Fatto!"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": false,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 14,
                "left": 24,
                "right": 24,
                "top": 14,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-start",
              }
            }
          >
            <View
              collapsable={false}
              jestAnimatedProps={
                {
                  "value": {},
                }
              }
              jestAnimatedStyle={
                {
                  "value": {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                }
              }
              jestInlineStyle={
                [
                  {
                    "alignItems": "center",
                    "borderCurve": "continuous",
                    "elevation": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "textAlignVertical": "center",
                  },
                  {
                    "paddingHorizontal": 0,
                  },
                  {
                    "backgroundColor": "transparent",
                    "borderColor": "#0B3EE3",
                    "borderRadius": 8,
                    "borderWidth": 0,
                    "height": undefined,
                  },
                  {},
                ]
              }
              style={
                [
                  {
                    "alignItems": "center",
                    "borderCurve": "continuous",
                    "elevation": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "textAlignVertical": "center",
                  },
                  {
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                  },
                  {},
                  {
                    "paddingHorizontal": 0,
                  },
                  {
                    "backgroundColor": "transparent",
                    "borderColor": "#0B3EE3",
                    "borderRadius": 8,
                    "borderWidth": 0,
                    "height": undefined,
                  },
                  {},
                ]
              }
            >
              <View
                collapsable={false}
                jestAnimatedProps={
                  {
                    "value": {},
                  }
                }
                jestAnimatedStyle={
                  {
                    "value": {},
                  }
                }
                jestInlineStyle={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    {
                      "columnGap": 8,
                    },
                    false,
                  ]
                }
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    {
                      "columnGap": 8,
                    },
                    false,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  accessible={false}
                  allowFontScaling={true}
                  collapsable={false}
                  ellipsizeMode="tail"
                  importantForAccessibility="no-hide-descendants"
                  jestAnimatedProps={
                    {
                      "value": {},
                    }
                  }
                  jestAnimatedStyle={
                    {
                      "value": {
                        "color": "rgba(11, 62, 227, 1)",
                      },
                    }
                  }
                  jestInlineStyle={
                    [
                      {
                        "textAlign": "auto",
                      },
                      {
                        "color": "#0B3EE3",
                      },
                    ]
                  }
                  maxFontSizeMultiplier={1.5}
                  numberOfLines={1}
                  style={
                    [
                      {},
                      {
                        "color": undefined,
                        "fontFamily": "Titillio",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                      [
                        {
                          "textAlign": "auto",
                        },
                        {
                          "color": "#0B3EE3",
                        },
                        {
                          "color": "rgba(11, 62, 227, 1)",
                        },
                      ],
                    ]
                  }
                >
                  Fatto!
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "opacity": 0.7,
          "position": "absolute",
          "right": 8,
          "top": 8,
        }
      }
    >
      <View
        accessibilityLabel="Salta"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          collapsable={false}
          jestAnimatedProps={
            {
              "value": {},
            }
          }
          jestAnimatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            }
          }
          jestInlineStyle={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
            ]
          }
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
              {
                "height": 24,
                "width": 24,
              },
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
        >
          <RNSVGSvgView
            accessibilityElementsHidden={true}
            accessibilityLabel=""
            accessible={false}
            align="xMidYMid"
            bbHeight={36}
            bbWidth={36}
            collapsable={false}
            color="#0E0F13"
            focusable={false}
            height={36}
            importantForAccessibility="no-hide-descendants"
            jestAnimatedProps={
              {
                "value": {
                  "color": "rgba(14, 15, 19, 1)",
                },
              }
            }
            jestAnimatedStyle={
              {
                "value": {},
              }
            }
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "flex": 0,
                  "height": 36,
                  "width": 36,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
            width={36}
          >
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                clipRule={0}
                d="M16.7071 8.70711c.3905-.39053.3905-1.02369 0-1.41422-.3905-.39052-1.0237-.39052-1.4142 0L12 10.5858 8.70711 7.29289c-.39053-.39052-1.02369-.39052-1.41422 0-.39052.39053-.39052 1.02369 0 1.41422L10.5858 12l-3.29291 3.2929c-.39052.3905-.39052 1.0237 0 1.4142.39053.3905 1.02369.3905 1.41422 0L12 13.4142l3.2929 3.2929c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L13.4142 12l3.2929-3.29289Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                fillRule={0}
                propList={
                  [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</View>
`;
